--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde_json = "1.0.104"
+serde = {version = "1.0.179", features = ["derive"]}
+config = "0.13.3"
+#more-config = "1.0.2"
