--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 serde_json = "1.0.104"
 serde = {version = "1.0.179", features = ["derive"]}
 config = "0.13.3"
-#more-config = "1.0.2"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+
